refine the docs
