# routes/order-route.js
@@ -16,7 +16,9 @@ router
   .route("/")
   .post(authenticateUser, createOrder)
   .get(authenticateUser, authorizePermissions("admin"), getAllOrders);
-router.route("/showAllMyOrders").get(authenticateUser, getCurrentUserOrders);
+router
+  .route("/getCurrentUserOrders")
+  .get(authenticateUser, getCurrentUserOrders);
 router
   .route("/:id")
   .get(authenticateUser, getSingleOrder)
